<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="18dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:background="@drawable/bg_cards">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">


            <LinearLayout
                android:id="@+id/LLDescricao"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="13dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/DataDeCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/CDataDeCadastro"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/DataCadastro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/CdataDados"
                    android:textColor="@color/Marfim"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextViewTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/CTitulo"
                    android:textColor="@color/black"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextViewRua"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/CRua"
                    android:textColor="@color/Marfim"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextViewBairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/CBairro"
                    android:textColor="@color/Marfim"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextViewCidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/CCidade"
                    android:textColor="@color/Marfim"
                    android:textSize="14dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/TextViewEstado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/CEstado"
                    android:textColor="@color/Marfim"
                    android:textSize="14dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LLDescricao2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="19dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/LLDescricao"
                android:layout_toRightOf="@+id/LLDescricao"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/CLatitude"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/DadosDeLatitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/ClatitudeDados"
                    android:textColor="@color/Marfim"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/Longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:text="@string/Clongitude"
                    android:textColor="@color/black"
                    android:textSize="17dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/DadosDeLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/ClongitudeDados"
                    android:textColor="@color/Marfim"
                    android:textSize="15dp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>