<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CadastroDeLocaisActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fundoo"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_layer_gradient"/>


    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_titulo_cadastro"
        android:text="@string/TCadastroDeLocais"
        android:textColor="@color/white"
        android:textSize="14pt"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="20pt"
        android:layout_marginLeft="13pt"
        android:layout_marginRight="13pt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/editTextCEP"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="82dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/bg_acesso"
        android:hint="@string/CEP"
        android:textColor="@color/white"
        android:textColorHint="@color/Marfim"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"/>


    <EditText
        android:id="@+id/editTextRua"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/bg_acesso"
        android:hint="@string/rua"
        android:textColor="@color/white"
        android:textColorHint="@color/Marfim"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCEP"/>

    <EditText
        android:id="@+id/editTextNumero"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/bg_acesso"
        android:hint="@string/numero"
        android:textColor="@color/white"
        android:textColorHint="@color/Marfim"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextRua"/>

    <EditText
        android:id="@+id/editTextBairro"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/bg_acesso"
        android:hint="@string/bairro"
        android:textColor="@color/white"
        android:textColorHint="@color/Marfim"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumero"/>

    <EditText
        android:id="@+id/editTextCidade"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/bg_acesso"
        android:hint="@string/cidade"
        android:textColor="@color/white"
        android:textColorHint="@color/Marfim"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBairro"/>

    <EditText
        android:id="@+id/editTextEstado"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/bg_acesso"
        android:hint="@string/estado"
        android:textColor="@color/white"
        android:textColorHint="@color/Marfim"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCidade"/>

    <TextView
        android:id="@+id/textViewAviso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/avisoCadastro"
        android:textAlignment="center"
        android:textColor="#CED6CDCD"
        android:textSize="12dp"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toTopOf="@+id/editTextEstado"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonConfirmar" />


    <Button
        android:id="@+id/buttonConfirmar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button"
        android:text="@string/BConfirmar"
        android:textColor="@color/Marfim"
        android:textSize="22dp"
        android:textStyle="bold"
        android:onClick="confirmarCadastro"
        app:layout_constraintBottom_toTopOf="@+id/buttonVoltar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/buttonVoltar"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/bg_button"
        android:text="@string/BVoltar"
        android:textColor="@color/Marfim"
        android:textSize="22dp"
        android:textStyle="bold"
        android:onClick="voltarHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>